# google-modules_gpu

common/: BUILD.bazel
mali_kbase/: BUILD.bazel  Kbuild  Makefile  mali_kbase_config.h  mali_kbase_config_defaults.h  mali_kbase_core_linux.c  mali_kbase_ctx_sched.c  mali_kbase_debug.h  mali_kbase_debugfs_helper.c  mali_kbase_defs.h  mali_kbase_gpuprops.c  mali_kbase_hw.c  mali_kbase_jd.c  mali_kbase_js.c  mali_kbase_mem.c  mali_kbase_mem_linux.c  mali_kbase_mem_pool.c  mali_kbase_pm.c  mali_kbase_pm.h  mali_kbase_softjobs.c  mali_linux_trace.h  mali_power_gpu_frequency_trace.h
mali_kbase/backend/gpu/: mali_kbase_jm_hw.c  mali_kbase_jm_rb.c  mali_kbase_model_error_generator.c  mali_kbase_pm_adaptive.c  mali_kbase_pm_backend.c  mali_kbase_pm_defs.h  mali_kbase_pm_driver.c  mali_kbase_pm_internal.h  mali_kbase_pm_metrics.c  mali_kbase_pm_policy.c  mali_kbase_time.c
mali_kbase/context/: mali_kbase_context.c
mali_kbase/csf/: mali_kbase_csf.c  mali_kbase_csf.h  mali_kbase_csf_defs.h  mali_kbase_csf_firmware.c  mali_kbase_csf_firmware_no_mali.c  mali_kbase_csf_kcpu.c  mali_kbase_csf_protected_memory.c  mali_kbase_csf_reset_gpu.c  mali_kbase_csf_scheduler.c  mali_kbase_csf_tiler_heap.c
mali_kbase/csf/ipa_control/: mali_kbase_csf_ipa_control.c
mali_kbase/device/backend/: mali_kbase_device_csf.c  mali_kbase_device_jm.c
mali_kbase/ipa/: mali_kbase_ipa.h
mali_kbase/ipa/backend/: mali_kbase_ipa_counter_common_csf.c
mali_kbase/mmu/: mali_kbase_mmu.c  mali_kbase_mmu.h
mali_kbase/platform/pixel/: Kbuild  mali_kbase_config_platform.h  pixel_gpu.c  pixel_gpu_control.h  pixel_gpu_dvfs.c  pixel_gpu_dvfs.h  pixel_gpu_dvfs_governor.c  pixel_gpu_dvfs_metrics.c  pixel_gpu_dvfs_qos.c  pixel_gpu_power.c  pixel_gpu_slc.c  pixel_gpu_sscd.c  pixel_gpu_sysfs.c  pixel_gpu_uevent.c  pixel_gpu_uevent.h
(+10 files in other folders)
