# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "mali_kbase",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
    ]) + [
        "//private/google-modules/gpu/common:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "mali_kbase.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/gpu/mali_pixel",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
