# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "mali_kbase",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
    ]) + [
        "//private/google-modules/gpu/common:headers",
        "//private/google-modules/power/mitigation:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "mali_kbase.ko",
        "tests/kutf/mali_kutf.ko",
        "tests/mali_kutf_clk_rate_trace/kernel/mali_kutf_clk_rate_trace_test_portal.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/gpu/mali_pixel",
        "//private/google-modules/power/mitigation:bcl",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
